# TradingPlatform

./: .clang-format  .env.example  .gitignore  CMakeLists.txt  LICENSE  QUICKSTART.md  README.md  SPEC.md  build.sh  run.sh  tradingProjectSpec.txt
.github/workflows/: ci.yml
docs/: GETTING_STARTED.md  PHASE1_SUMMARY.md
src/: CMakeLists.txt  DBWriter.cpp  ExecutionGateway.cpp  Logger.cpp  MarketDataFeed.cpp  OrderManager.cpp  WebSocketServer.cpp  main.cpp
tests/: CMakeLists.txt  test_main.cpp  test_order.cpp  test_order_manager.cpp
